# gpt-neox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  34b_launch_script.sh  9vbuhj4o_analysis.txt  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CRITICAL_GRADIENT_ASCENT_FIX.md  Dockerfile  EARLY_GA_TREND_ANALYSIS.md  EVAL_TASKS_WITHOUT_VALIDATION_CHANGES.md  GA_57_TO_1_CONFIG_OPTIONS.md  GA_BUG_ANALYSIS.md  GA_DETAILED_ANALYSIS.md  GA_LOSS_ANALYSIS_CORRECTED.md  GA_LOSS_ANALYSIS_SUMMARY.md  GRADIENT_ASCENT_CHANGELOG.md  GRADIENT_ASCENT_FIX_DOCUMENTATION.md  GRADIENT_ASCENT_SCALING.md  GRADIENT_ASCENT_USAGE.md  GRADIENT_ASCENT_VERIFICATION_SUMMARY.md  GRADIENT_SIGNS_ANALYSIS.md  GRADIENT_SIGNS_IMPLEMENTATION.md  LICENSE  Load_Pile.ipynb  MANIFEST.in  PPTX generator.ipynb  PROGRESS.md  README-MUP.md  README.md  README_convert_upload.md  Testing.ipynb  WANDB_ANALYSIS_README.md  WANDB_RUN_ANALYSIS_CHECKLIST.md  adam_munging.ipynb  analyze_early_ga_trend.py  analyze_ga_losses.py  analyze_gradient_signs_data.py  (+152 more)
requirements/: lumi_requirements.txt  pyproject-apex-pip.toml  pyproject-comet.toml  pyproject-flashattention.toml  pyproject-mamba.toml  pyproject-neox-dev.toml  pyproject-onebitadam.toml  pyproject-s3.toml  pyproject-sparseattention.toml  pyproject-tensorboard.toml  pyproject-transformerengine.toml  pyproject-wandb.toml  pyproject.toml  requirements-apex-pip.txt  requirements-comet.txt  requirements-dev.txt  requirements-flashattention.txt  requirements-magma.txt  requirements-mamba.txt  requirements-moe.txt  requirements-mup.txt  requirements-onebitadam.txt  (+10 more)
(+1437 files in other folders)
